fixing bug 85564 - InstallTrigger.getVersion returns NULL when the component has been installed.  r=sgehani, sr=mscott, a=drivers@mozilla.org.